# stream-deck-stm32

./: Cargo.toml  STM32F7x6.svd  rust-toolchain.toml
.cargo/: config.toml
src/: main.rs  touchscreen.rs
