[package]
name = "stream-deck-stm32"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-stm32 = { version = "0.1.0", features = ["defmt", "stm32f746ng", "memory-x", "unstable-pac", "time-driver-any", "exti"]  }
embassy-executor = { version = "0.6.3", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }
embassy-time = { version = "0.3.2", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
# embedded-hal = "0.2.6"
panic-probe = { version = "0.3", features = ["print-defmt"] }

[patch.crates-io]
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "45d9bd57575d9391a68334a2f3966b92032d5dc6" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "45d9bd57575d9391a68334a2f3966b92032d5dc6" }
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", rev = "45d9bd57575d9391a68334a2f3966b92032d5dc6" }

[profile.release]
debug = 2